--- a/scss/style.scss
+++ b/scss/style.scss
@@ -139,7 +139,7 @@ ul{
     font-weight: 500;
     padding: 12px 35px;
     color: white;
-    border-radius: 40px;
+    border-radius: 10px;
     border: none;
     display: inline-block;
     white-space: nowrap;
@@ -793,9 +793,71 @@ h3.my-profession{
         .btn{
             height: 50px;
             padding: 0 50px;
+            position: relative;
+            // svg{
+            //     position: absolute;
+            //     width: 20%;
+            //     top: 0%;
+            //     transform: translateY(27%);
+            //     path {
+            //         fill: var(--text-black-900);
+            //     }
+            // }
+            // &.clicked {
+            //     background-color: #cff5b3;
+            //     border: 2px solid #cff5b3;
+            //     color: #6AAA3B;
+            //     padding-right: 6px;
+            //     animation: bounce-in .3s;
+            //     cursor: default;
+            
+            //     svg {
+            //         animation: flyaway 1.3s linear;
+            //         top: -80px;
+            //         right: -1000px;
+            //         path {
+            //             fill: #6AAA3B;
+            //         }
+            //     }
+            // }
         }
     }
 }
+
+// @keyframes flyaway {
+//     0%   { transform: rotate(10deg);
+//             top: 13px;
+//             right: 25px;
+//             height: 30px; }
+//     5%   { transform: rotate(10deg);
+//             top: 13px;
+//             right: 0px;
+//             height: 30px; }
+//     20%   { transform: rotate(-20deg);
+//             top: 13px;
+//             right: -130px;
+//             height: 45px; }  
+//     40%   { transform: rotate(10deg);
+//             top: -40px;
+//             right: -280px;
+//             opacity: 1; }
+//     100% { transform: rotate(60deg);
+//             top: -200px;
+//             right: -1000px;
+//             height: 0;
+//             opacity: 0; }
+//     }
+
+//     @keyframes bounce-in {
+//     0% { padding-right: 30px; }
+//     40% { padding-right: 6px; }
+//     50% { padding-left: 30px; }
+//     100% { padding-left: 6px; }
+//     }
+
+
+
+
 
 .success-message{
     display: none;
