--- a/scss/style.scss
+++ b/scss/style.scss
@@ -278,6 +278,10 @@ ul{
         li{
             margin-bottom: 20px;
             display: block;
+            transition: all .3s ease;
+            &:hover{
+                transform: scale(1.1);
+            }
             a{
                 font-size: 16px;
                 font-weight: 600;
