--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,6 +26,7 @@ body{
     line-height: 1.5;
     font-size: 16px;
     font-family:'Noto Sans TC', sans-serif;
+    overflow: hidden;
 }
 *{
     margin: 0;
@@ -623,6 +624,91 @@ h3.my-profession{
 
 // protfolio
 .portfoilo{
+    position: relative;
+    //eyes
+.face{
+    position: fixed;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    // background: var(--skin-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    left: 50%;
+    top: 2%;
+    transition: all .3s ease;
+    border: 1px solid var(--text-black-900);
+    transform: translateX(-50%);
+    @media(max-width:630px){
+        display: none;
+    }
+    &.open{
+        left:calc(50% + 270px) ;
+    }
+    &.active{
+        animation: face-circle 1s infinite;
+    }
+    svg{
+        position: absolute;
+        left: 90%;
+        fill: var(--text-black-900);
+        opacity: 0;
+        transition: all .3s ease;
+        &.shakesvg{
+            animation: shake 100ms infinite;
+        }
+    }
+    // &:hover::before{
+    //     content: '';
+    //     position: absolute;
+    //     top: 140px;
+    //     width: 120px;
+    //     height: 20px;
+    //     border-bottom-left-radius: 0px;
+    //     border-bottom-right-radius: 0px;
+    // }
+    // &::before{
+    //     content: '';
+    //     position: absolute;
+    //     top: 130px;
+    //     width: 120px;
+    //     height: 55px;
+    //     background: var(--text-black-700);
+    //     border-bottom-left-radius: 70px;
+    //     border-bottom-right-radius: 70px;
+    //     -webkit-transition: .5s;
+    //     transition: .5s;
+    // }
+    .eyes{
+        position: relative;
+        top: -40px;
+        display: flex;
+        .eye{
+            position: relative;
+            width: 60px;
+            height: 60px;
+            display: block;
+            background: #fff;
+            margin: 0 15px ;
+            border-radius: 50%;
+            &::before{
+                content: '';
+                position: absolute;
+                top: 50%;
+                left: 25px;
+                transform: translate(-50%,-50%);
+                width: 40px;
+                height: 40px;
+                background: var(--skin-color);
+                border-radius: 50%;
+
+            }
+        }
+    }
+}
+
+
     .container{
         padding-bottom: 40px;
     }
@@ -660,6 +746,7 @@ h3.my-profession{
             width: 100%;
             height: 250px;
             display: block;
+            object-fit: contain;
             @media(max-width:767px){
                 height: 350px;
             }
@@ -877,3 +964,17 @@ h3.my-profession{
 .swal2-title,.swal2-confirm .swal2-styled{
     color: var(--text-black-900)!important;
 }
+
+@keyframes face-circle{
+    0%{
+        top:2%;
+    }
+
+    50%{
+        top:5%; 
+    }
+    100%{
+        top:2%;
+    }
+    }
+
