--- a/scss/style.scss
+++ b/scss/style.scss
@@ -43,10 +43,12 @@ ul{
 }
 @keyframes slideSection{
     0%{
-        transform: translateX(100%);
+        // transform: translateX(100%);
+        left: 100%;
     }
     100%{
-        transform: translate(0%);
+        // transform: translate(0%);
+        left: 270px;
     }
 }
 .section{
@@ -623,8 +625,15 @@ h3.my-profession{
 }
 
 // protfolio
+@keyframes op {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
 .portfoilo{
-    position: relative;
     //eyes
 .face{
     position: fixed;
@@ -635,16 +644,22 @@ h3.my-profession{
     display: flex;
     justify-content: center;
     align-items: center;
-    left: 50%;
+    left: calc( 50% + 135px);
     top: 2%;
-    transition: all .3s ease;
     border: 1px solid var(--text-black-900);
     transform: translateX(-50%);
+    transition: all .3s ease;
+    @media(max-width:1199px){
+        left:50%;
+    }
     @media(max-width:630px){
         display: none;
     }
+    &.op{
+        animation: op 1s cubic-bezier(1, -0.71, 0.77, 0.73);
+    }
     &.open{
-        left:calc(50% + 270px) ;
+        left:calc(50% + 135px) ;
     }
     &.active{
         animation: face-circle 1s infinite;
@@ -659,27 +674,6 @@ h3.my-profession{
             animation: shake 100ms infinite;
         }
     }
-    // &:hover::before{
-    //     content: '';
-    //     position: absolute;
-    //     top: 140px;
-    //     width: 120px;
-    //     height: 20px;
-    //     border-bottom-left-radius: 0px;
-    //     border-bottom-right-radius: 0px;
-    // }
-    // &::before{
-    //     content: '';
-    //     position: absolute;
-    //     top: 130px;
-    //     width: 120px;
-    //     height: 55px;
-    //     background: var(--text-black-700);
-    //     border-bottom-left-radius: 70px;
-    //     border-bottom-right-radius: 70px;
-    //     -webkit-transition: .5s;
-    //     transition: .5s;
-    // }
     .eyes{
         position: relative;
         top: -40px;
