--- a/scss/style.scss
+++ b/scss/style.scss
@@ -373,7 +373,7 @@ h3.my-profession{
         }
         img{
             margin: auto;
-            height: 400px;
+            // height: 4 00px;
             border-radius: 5px;
         }
     }
