--- a/css/style-switcher.css
+++ b/css/style-switcher.css
@@ -8,17 +8,12 @@
   background: var(--bg-black-100);
   z-index: 101;
   border-radius: 5px;
-  -webkit-transition: all .3s ease;
-  transition: all .3s ease;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
+  transition: all 0.3s ease;
+  transform: translateX(100%);
 }
-
 .style-switcher.open {
-  -webkit-transform: translateX(-25px);
-          transform: translateX(-25px);
+  transform: translateX(-25px);
 }
-
 .style-switcher .s-icon {
   position: absolute;
   height: 40px;
@@ -31,23 +26,18 @@
   border: 1px solid var(--bg-black-50);
   margin-right: 25px;
   cursor: pointer;
-  -webkit-transition: all .3s ease;
-  transition: all .3s ease;
+  transition: all 0.3s ease;
   border-radius: 50%;
 }
-
 .style-switcher .s-icon i {
   line-height: 40px;
 }
-
 .style-switcher .day-night {
   top: 55px;
 }
-
 .style-switcher .style-switcher-toggler {
   top: 0%;
 }
-
 .style-switcher h4 {
   margin: 0 0 10px;
   color: var(--text-black-700);
@@ -55,49 +45,34 @@
   font-weight: 600;
   text-transform: capitalize;
 }
-
 .style-switcher .colors {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
-
 .style-switcher .colors span {
   display: inline-block;
   height: 30px;
   width: 30px;
   border-radius: 50%;
   cursor: pointer;
-  -webkit-transition: all .2s ease;
-  transition: all .2s ease;
+  transition: all 0.2s ease;
 }
-
 .style-switcher .colors span:hover {
   outline: 3px solid var(--text-black-700);
 }
-
 .style-switcher .color-1 {
   background: #ec6218;
 }
-
 .style-switcher .color-2 {
   background: #c16c45;
 }
-
 .style-switcher .color-3 {
   background: #37b182;
 }
-
 .style-switcher .color-4 {
   background: #1854b4;
 }
-
 .style-switcher .color-5 {
   background: #f021b2;
-}
-/*# sourceMappingURL=style-switcher.css.map */
+}/*# sourceMappingURL=style-switcher.css.map */
